--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -27,9 +27,9 @@ layout: compress
 
     <div class="block-right">
       <div class="inner-post content">
-      <div class="share-buttons">
+      <!-- <div class="share-buttons"> -->
         {% include share.html %}
-      </div>
+      <!-- </div> -->
       <a href="../posts.html" title="posts" class="posts-menu-icon"></a>
       <!-- <a title="projects" class="projects-menu-icon">
         <span></span></a> -->
